test/samples/invalid/noNodeConnection.ygl
Foo.in.x -> Foo2.out.y;

